tests/Checker/everything/errors/26b.vc
void f(int a, float b) { return; }

int main() {
    f(1);
    return 1;
}
